# gcb-sample

./: .dockerignore  .envrc  .gitignore  Dockerfile  Makefile  cloudbuild.yaml  pyproject.toml
gcb_sample/: __main__.py
run/: cloudbuild.yaml
